# hs-ieee754

./: .gitignore  CHANGELOG  NEWS  Setup.lhs  ieee.cabal  ieee754.cabal
Data/: AEq.hs
Numeric/: IEEE.hs
cbits/: double.c  feqrel.h  feqrel_source.c  float.c
tests/: Makefile  Properties.hs  Tests.hs
