name:            ieee
version:         0.7
homepage:        http://github.com/patperry/hs-ieee
synopsis:        Approximate comparisons for IEEE floating point numbers
description:
    Approximate comparison of floating point numbers based on the
    algorithm in Section 4.2.2 of Knuth's _Seminumerical Algorithms_,
    NaN-aware minimum and maximum, and a type class for approximate 
    comparisons.
    .
category:        Math
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2010. Patrick Perry <patperry@gmail.com>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@gmail.com>
cabal-version: >= 1.2.0
build-type:      Custom
tested-with:     GHC ==6.12.3

extra-source-files: NEWS tests/Makefile tests/Tests.hs cbits/feqrel_source.c

flag big_endian
  description: Build for a big endian machine.
  default:     False

library
    exposed-modules: Data.AEq
                     Numeric.IEEE

    build-depends:   base >= 3 && < 5

    cc-options:      -DNDEBUG -O3

    if flag(big_endian)
        cc-options:  -DBIG_ENDIAN

    ghc-options:     -Wall
    c-sources:       cbits/float.c cbits/double.c
    cc-options:      --std=c99

    extensions:      FlexibleInstances
                     ForeignFunctionInterface
