name:            ieee
version:         0.7
homepage:        http://github.com/patperry/hs-ieee
synopsis:        Utilities for dealing with IEEE floating point numbers
description:
    Utilities for dealing with IEEE floating point numbers, ported
    from the Tango math library; approximate and exact equality
    comparisons for general types.
category:        Math
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2010. Patrick Perry <patperry@gmail.com>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@gmail.com>
cabal-version: >= 1.2.0
build-type:      Custom
tested-with:     GHC ==6.12.3

extra-source-files: NEWS tests/Makefile tests/Tests.hs cbits/feqrel_source.c
                    LICENSE.Tango

flag big_endian
  description: Build for a big endian machine.
  default:     False

library
    exposed-modules: Data.AEq
                     Numeric.IEEE

    extensions:      FlexibleInstances
                     ForeignFunctionInterface

    build-depends:   base >= 3 && < 5
    ghc-options:     -Wall


    c-sources:       cbits/float.c
                     cbits/double.c

    cc-options:      -Wall -DNDEBUG -O3 --std=c99
    if flag(big_endian)
        cc-options:  -DBIG_ENDIAN

    extra-libraries: m
